--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -22,7 +22,8 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="60dp"
             android:src="@drawable/selectegg"
             tools:layout_editor_absoluteX="105dp"
             tools:layout_editor_absoluteY="137dp" />
@@ -32,34 +33,32 @@
             android:id="@+id/eggs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingBottom="16dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="100dp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp">
 
             <ImageView
                 android:id="@+id/first"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
-                android:layout_marginRight="40dp"
-                android:src="@drawable/egg1" />
+                android:layout_width="250dp"
+                android:layout_height="350dp"
+                android:layout_marginRight="-100dp"
+                android:src="@drawable/egg" />
 
             <ImageView
                 android:id="@+id/second"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
-                android:layout_marginRight="40dp"
-                android:src="@drawable/egg2" />
+                android:layout_width="250dp"
+                android:layout_height="350dp"
+                android:layout_marginRight="-100dp"
+                android:src="@drawable/egg" />
 
             <ImageView
                 android:id="@+id/third"
-                android:layout_width="60dp"
-                android:layout_height="100dp"
-                android:src="@drawable/egg3" />
+                android:layout_width="250dp"
+                android:layout_height="350dp"
+                android:src="@drawable/egg" />
         </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
