--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -5,12 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.example.hyojung.muggi.LoginActivity">
+    tools:context="com.example.hyojung.muggi.ChooseActivity">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:src="@drawable/bg2"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="395dp"
         android:layout_height="700dp"
-        android:background="@color/colorPrimary"
         android:orientation="vertical"
         android:weightSum="1"
         tools:layout_editor_absoluteX="8dp"
@@ -22,11 +31,12 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="90dp"
             android:layout_marginBottom="60dp"
             android:src="@drawable/selectegg"
             tools:layout_editor_absoluteX="105dp"
             tools:layout_editor_absoluteY="137dp" />
+
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tool"
@@ -40,25 +50,31 @@
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp">
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/first"
-                android:layout_width="250dp"
-                android:layout_height="350dp"
-                android:layout_marginRight="-100dp"
-                android:src="@drawable/egg" />
+                android:layout_width="100dp"
+                android:layout_height="130dp"
+                android:background="#00ff0000"
+                android:scaleType="fitXY"
+                android:layout_marginRight="-210dp"
+                android:src="@drawable/egg_btn" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/second"
-                android:layout_width="250dp"
-                android:layout_height="350dp"
-                android:layout_marginRight="-100dp"
-                android:src="@drawable/egg" />
+                android:layout_width="100dp"
+                android:layout_height="130dp"
+                android:background="#00ff0000"
+                android:scaleType="fitXY"
+                android:layout_marginRight="-210dp"
+                android:src="@drawable/egg_btn" />
 
-            <ImageView
+            <ImageButton
                 android:id="@+id/third"
-                android:layout_width="250dp"
-                android:layout_height="350dp"
-                android:src="@drawable/egg" />
+                android:layout_width="100dp"
+                android:layout_height="130dp"
+                android:background="#00ff0000"
+                android:scaleType="fitXY"
+                android:src="@drawable/egg_btn" />
         </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
