--- a/app/src/main/res/layout/activity_eggselected.xml
+++ b/app/src/main/res/layout/activity_eggselected.xml
@@ -9,12 +9,14 @@
         android:adjustViewBounds="true"
         android:src="@drawable/bg2"/>
     <ImageView
+        android:id="@+id/egg"
         android:layout_gravity="center"
         android:layout_marginTop="45dp"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:src="@drawable/egg_shadow"/>
     <ImageView
+        android:id="@+id/text"
         android:layout_gravity="center"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -28,5 +30,5 @@
         android:background="#00ff0000"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="460dp"
-        android:src="@drawable/startbutton" />
+        android:src="@drawable/start_btn" />
 </FrameLayout>
