--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -7,30 +7,24 @@
 
     tools:context="com.example.hyojung.muggi.ChooseActivity">
 
-    <LinearLayout
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="643dp"
+>
         <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:src="@drawable/bg2"/>
-    </LinearLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
+            android:adjustViewBounds="true"
+            android:src="@drawable/bg2"/>
         <ImageView
-            android:id="@+id/selectEgg"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_centerHorizontal="true"
+            android:id="@+id/text"
             android:layout_gravity="center"
-            android:layout_marginTop="90dp"
-            android:layout_marginBottom="60dp"
-            android:src="@drawable/selectegg" />
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="200dp"
+            android:src="@drawable/selectegg"/>
 
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -38,12 +32,12 @@
             android:id="@+id/eggs"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="150dp"
             android:gravity="center"
             android:orientation="horizontal"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="0dp"
-            android:layout_below="@id/selectEgg">
+            android:layout_below="@id/text">
 
             <ImageButton
                 android:id="@+id/spikeySelect"
@@ -71,5 +65,5 @@
                 android:scaleType="fitXY"
                 android:src="@drawable/egg_btn" />
         </LinearLayout>
-    </RelativeLayout>
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
