--- a/app/src/main/res/layout/activity_eggplay.xml
+++ b/app/src/main/res/layout/activity_eggplay.xml
@@ -3,11 +3,30 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:scaleType="fitXY"
+    android:adjustViewBounds="true"
+    android:rotation="180"
+    android:src="@drawable/bg2"/>
+
+    <ImageView
+        android:id="@+id/shadow"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:rotation="180"
-        android:src="@drawable/bg2"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/shadow_egg" />
+    <ImageView
+        android:id="@+id/egg"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_marginBottom="30dp"
+        android:layout_gravity="center"
+        android:scaleType="fitXY"
+        android:src="@drawable/egg" />
 
 </FrameLayout>
