--- a/app/src/main/res/layout/activity_eggplay.xml
+++ b/app/src/main/res/layout/activity_eggplay.xml
@@ -19,6 +19,7 @@
         android:layout_marginTop="20dp"
         android:scaleType="fitXY"
         android:src="@drawable/shadow_egg" />
+
     <ImageView
         android:id="@+id/egg"
         android:layout_width="100dp"
@@ -29,4 +30,29 @@
         android:scaleType="fitXY"
         android:src="@drawable/egg" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageButton
+            android:id="@+id/hug"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:scaleType="fitStart"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="30dp"
+            android:background="#00ff0000"
+            android:src="@drawable/hug_btn" />
+        <ImageButton
+            android:id="@+id/music"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:scaleType="fitEnd"
+            android:layout_marginRight="40dp"
+            android:layout_marginBottom="30dp"
+            android:background="#00ff0000"
+            android:src="@drawable/music_btn" />
+    </RelativeLayout>
 </FrameLayout>
