--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -13,6 +13,15 @@
         android:layout_height="643dp"
 >
         <ImageView
+            android:id="@+id/qbg"
+            android:layout_width="1400dp"
+            android:layout_height="1500dp"
+            android:scaleType="fitXY"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:src="@drawable/q_bg"/>
+
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:scaleType="fitXY"
@@ -23,8 +32,16 @@
             android:layout_gravity="center"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="200dp"
+            android:layout_marginBottom="150dp"
             android:src="@drawable/selectegg"/>
+
+        <ImageView
+            android:id="@+id/choosetext"
+            android:layout_gravity="center"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="110dp"
+            android:src="@drawable/eggchoose_text"/>
 
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -42,7 +59,7 @@
             <ImageButton
                 android:id="@+id/spikeySelect"
                 android:layout_width="100dp"
-                android:layout_height="130dp"
+                android:layout_height="120dp"
                 android:layout_marginRight="-210dp"
                 android:background="#00ff0000"
                 android:scaleType="fitXY"
@@ -51,7 +68,7 @@
             <ImageButton
                 android:id="@+id/baldySelect"
                 android:layout_width="100dp"
-                android:layout_height="130dp"
+                android:layout_height="120dp"
                 android:background="#00ff0000"
                 android:scaleType="fitXY"
                 android:layout_marginRight="-210dp"
@@ -60,7 +77,7 @@
             <ImageButton
                 android:id="@+id/buggySelect"
                 android:layout_width="100dp"
-                android:layout_height="130dp"
+                android:layout_height="120dp"
                 android:background="#00ff0000"
                 android:scaleType="fitXY"
                 android:src="@drawable/egg_btn" />
