--- a/app/src/main/res/layout/activity_eggplay.xml
+++ b/app/src/main/res/layout/activity_eggplay.xml
@@ -42,4 +42,13 @@
         android:background="#00ff0000"
         android:src="@drawable/hug_btn1" />
 
+    <ImageView
+        android:id="@+id/eggtext"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="center"
+        android:scaleType="fitXY"
+        android:src="@drawable/eggplay_text" />
 </FrameLayout>
