--- a/app/src/main/res/layout/activity_eggplay.xml
+++ b/app/src/main/res/layout/activity_eggplay.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ImageView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,6 +11,17 @@
     android:rotation="180"
     android:src="@drawable/bg2"/>
 
+    <TextView
+        android:id="@+id/warmth_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="60dp"
+        android:scaleType="fitXY"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="50dp"
+        android:fontFamily="sans-serif-thin"
+        />
     <ImageView
         android:id="@+id/shadow"
         android:layout_width="200dp"
