--- a/app/src/main/res/anim/slide.xml
+++ b/app/src/main/res/anim/slide.xml
@@ -5,12 +5,13 @@
     <translate
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:fromXDelta="0%"
-        android:toXDelta="10%"
-        android:fromYDelta="20%"
+        android:toXDelta="15%"
+        android:fromYDelta="30%"
         android:toYDelta="0%"
         android:duration="50000"
         android:zAdjustment="top"
         android:repeatCount="infinite"
-        android:repeatMode="restart"/>
+        android:repeatMode="restart"
+        android:interpolator="@android:anim/linear_interpolator"/>
 
 </set>
