--- a/app/src/main/res/layout/activity_eggplay.xml
+++ b/app/src/main/res/layout/activity_eggplay.xml
@@ -16,12 +16,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
-        android:scaleType="fitXY"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="50dp"
+        android:layout_marginTop="95dp"
         android:fontFamily="sans-serif-thin"
-        />
+        android:scaleType="fitXY"
+        android:text="100"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="100dp" />
+    <TextView
+        android:id="@+id/warmth_goal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="95dp"
+        android:fontFamily="sans-serif-thin"
+        android:scaleType="fitXY"
+        android:text="300"
+        android:textColor="@color/colorPrimaryAlpha"
+        android:textSize="100dp" />
     <ImageView
         android:id="@+id/shadow"
         android:layout_width="200dp"
@@ -63,4 +74,5 @@
         android:layout_gravity="center"
         android:scaleType="fitXY"
         android:src="@drawable/eggplay_text" />
+
 </FrameLayout>
