--- a/app/src/main/res/layout/activity_eggplay.xml
+++ b/app/src/main/res/layout/activity_eggplay.xml
@@ -33,6 +33,17 @@
         android:text="300"
         android:textColor="@color/colorPrimaryAlpha"
         android:textSize="100dp" />
+    <TextView
+        android:id="@+id/age_val"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="56dp"
+        android:fontFamily="sans-serif-condensed"
+        android:scaleType="fitXY"
+        android:text="0살"
+        android:textColor="#000000"
+        android:textSize="30dp" />
     <ImageView
         android:id="@+id/shadow"
         android:layout_width="200dp"
